resolve mobile menu visibility

--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,7 @@ body{
     padding: 0;
     font-family: "Montserrat", sans-serif;
     width: 100%;
+   
 }
 
 .game-pic{
@@ -139,6 +140,8 @@ body{
     flex-direction: row;
     color: white;
     background:linear-gradient(rgb(36, 34, 34),rgb(27, 26, 26));
+    width: 100%;
+    box-sizing: border-box;
 }
 .video{
     height: 300px;
@@ -284,8 +287,8 @@ body{
   }
   .escape-menu{
     display: none;
-
   }
+ 
 .highlight{
     border-bottom: 4px solid rgb(219, 32, 32) ;
     transform: scale(1.26);
@@ -297,15 +300,33 @@ body{
     padding-bottom: 8px;
     
 }
+.menu, .escape-menu {
+    display: none;
+    height: 40px;
+    cursor: pointer;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    z-index: 1000; 
+}
 
 /* phone */
 @media screen and (max-width:767px){
     html,body{
         margin: 0;
         padding: 0;
-	width:100%;
-	overflow-x:hidden;
+        width: 100%;
+        overflow-x: hidden;
     }
+    *{
+        max-width: 100%;
+        box-sizing: border-box;
+    }
+    
+    .nav-bar {
+        padding-left: 10px;
+    }
+    
     .left-bar-nav{
         position: absolute;
         top: -1000px;
@@ -313,74 +334,171 @@ body{
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        margin-left: 250px;
-        gap: 50px;
-        margin-top:20px ;
-       
+        width: 100%;
+        left: 0;
+        gap: 20px;
+        margin-top: 20px;
+        background-color: rgb(24, 24, 24);
+        padding: 20px 0;
+        transition: top 0.3s ease;
     }
-    .nav-bar-container{
-	    width:100%;
-
+    
     .first-part{
         padding-top: 100px;
         display: flex;
         flex-direction: column;
         gap: 20px;
+        height: auto;
+        padding-bottom: 50px;
     }
+    
     .welcomeVideo{
-        margin-top: 0px;
-        margin-left: 45px;
-
+        margin: 20px auto;
+        width: 90%;
+        height: auto;
     }
+    
+    .first {
+        padding: 20px;
+        text-align: center;
+    }
+    
     .first span{
         font-size: 50px;
-        margin-left: 40px;
+        margin-left: 0;
     }
+    
     .first h1{
         font-size: 35px;
     }
-    .image img{
-        width: 550px;
-        margin-left: 0px;
-	margin-right:0px;
+    
+    .game-pic {
+        height: auto;
+        padding: 50px 20px;
     }
+    
+    .image img{
+        width: 100%;
+        margin: 0;
+    }
+    
     .introduction{
         display: flex;
         flex-direction: column;
+        height: auto;
+        padding: 50px 20px;
     }
-    .img1{
-        width: 500px;
-        margin-left:5px;
+    
+    .rayImageContainer {
+        flex-direction: column;
+        margin-right: 0;
+        padding: 0;
     }
-    .rotation-video{
-        width: 550px;
-        margin-left: 0;
+    
+    .rayImage {
+        width: 100%;
     }
-    .rayImage img{
-        width: 100px;
+    
+    .rayImage img {
+        width: 100%;
     }
-  .right-nav-bar{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    gap: 20px;
-    width:100%;
-  }
-  .menu{
-    display: block;
-    height: 40px;
-    cursor: pointer;
-    position:absolute;
-    top:20px;
-    right:20px;
-  }
-  .escape-menu{
-    cursor: pointer;
-    top:20px;
-    right:20px;
-  }
- 
+    
+    .rayDescription {
+        padding: 20px;
+    }
+    
+    .features {
+        height: auto;
+        padding: 50px 20px;
+    }
+    
+    .img1, .rotation-video{
+        width: 100%;
+        margin: 20px 0;
+    }
+    
+    .right-nav-bar{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+    }
+    
+    .menu{
+        display: block;
+        height: 40px;
+        cursor: pointer;
+        position: absolute;
+        right: 20px;
+        top: 20px;
+    }
+    
+    .escape-menu{
+        display: none;
+
+        height: 40px;
+        cursor: pointer;
+        position: absolute;
+        right: 20px;
+        top: 20px;
+    }
+    
+    .nav-bar-container{
+        flex-wrap: wrap;
+    }
+    
+    .about-container {
+        flex-direction: column;
+        margin-top: 50px;
+        gap: 30px;
+    }
+    
+    .about-us-text {
+        padding-top: 50px;
+        padding: 20px;
+    }
+    
+    .social-container {
+        width: 100%;
+    }
+    
+    .socials {
+        justify-content: center;
+    }
+    
+    .email {
+        margin: 20px 0;
+        text-align: center;
+    }
+    
+    .demo {
+        padding: 20px;
+        justify-content: center;
+    }
+    
+    
+    .features-section {
+        padding: 0;
+    }
+    
+    .features-container {
+        padding: 0;
+    }
+    
+    .features-description {
+        padding: 20px;
+    }
+    
+    .feature-plans {
+        padding: 50px 20px;
+    }
+    
+
+    video {
+        max-width: 100%;
+        height: auto;
+    }
 }
 .email a{
     margin-right: 50px;
